--- a/LangChainJS/next-langchain-app/package.json
+++ b/LangChainJS/next-langchain-app/package.json
@@ -13,6 +13,7 @@
     "@langchain/core": "^0.2.28",
     "@langchain/openai": "^0.2.7",
     "langchain": "^0.2.16",
+    "moment": "^2.30.1",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18"
