--- a/LangChainJS/next-langchain-app/package.json
+++ b/LangChainJS/next-langchain-app/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.2.28",
     "@langchain/core": "^0.2.28",
     "@langchain/openai": "^0.2.7",
+    "dotenv": "^16.4.5",
     "langchain": "^0.2.16",
     "moment": "^2.30.1",
     "next": "14.2.6",
