--- a/LangChainJS/next-ragbot-app/package.json
+++ b/LangChainJS/next-ragbot-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-agentbot-app",
+  "name": "next-ragbot-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,8 +12,6 @@
     "@langchain/community": "^0.2.31",
     "@langchain/core": "^0.2.28",
     "@langchain/openai": "^0.2.7",
-    "cheerio": "^1.0.0",
-    "dotenv": "^16.4.5",
     "langchain": "^0.2.17",
     "moment": "^2.30.1",
     "next": "14.2.6",
