--- a/LangChainJS/next-ragbot-app/package.json
+++ b/LangChainJS/next-ragbot-app/package.json
@@ -15,6 +15,7 @@
     "langchain": "^0.2.17",
     "moment": "^2.30.1",
     "next": "14.2.6",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
