--- a/LangChainJS/next-ragbot-app/package.json
+++ b/LangChainJS/next-ragbot-app/package.json
@@ -12,6 +12,7 @@
     "@langchain/community": "^0.2.31",
     "@langchain/core": "^0.2.28",
     "@langchain/openai": "^0.2.7",
+    "cheerio": "^1.0.0",
     "langchain": "^0.2.17",
     "moment": "^2.30.1",
     "next": "14.2.6",
