--- a/LangChainJS/next-ragbot-app/package.json
+++ b/LangChainJS/next-ragbot-app/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@langchain/community": "^0.2.31",
     "@langchain/core": "^0.2.28",
+    "@langchain/google-genai": "^0.0.26",
     "@langchain/openai": "^0.2.7",
+    "@langchain/pinecone": "^0.0.9",
+    "@pinecone-database/pinecone": "^3.0.1",
     "cheerio": "^1.0.0",
     "langchain": "^0.2.17",
     "moment": "^2.30.1",
