--- a/Frontend/Final/next-platform-app/package.json
+++ b/Frontend/Final/next-platform-app/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "socket.io-client": "^4.7.5"
+    "socket.io-client": "^4.7.5",
+    "socketio": "^1.0.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
